--- a/index.html
+++ b/index.html
@@ -79,6 +79,48 @@
 
 
             </section>
+                         <!-- plan for web-learning -->
+
+            <section> 
+                          <h1 class="plan-title">My Plans</h1>
+
+                          <div class="web-learning">
+
+                            <div class="plan-styles">
+                                <img src="styles/images/icons/web.png" 
+                                alt="">
+                                <h1 class="plan-name">Web Development</h1>
+                                <h3>I want to start</h3>
+                            </div> 
+
+                            <div class="plan-styles">
+                                 <img src="styles/images/icons/js.png" 
+                                     alt="">
+                                     <h1 class="plan-name">JavaScript </h1>
+                                     <h3>I want to learn</h3>
+
+                            </div>
+
+                            <div class="plan-styles">
+                                  <img src="styles/images/icons/smoke.png" 
+                                       alt="">
+                                       <h1 class="plan-name">Smoking Habit</h1>
+                                       <h3>I want to end</h3>
+                            </div>
+
+                            <div class="plan-styles">
+                                    <img src="styles/images/icons/ecom.png" 
+                                     alt="">
+                                     <h1 class="plan-name">Ecommerce</h1>
+                                     <h3>want to develop</h3>
+                            </div>
+                            
+        
+
+                          </div>
+
+            </section>
+
 
 
 
